EDU-1149 Fix horizontal overflow cases

--- a/src/components/default-page-footer.less
+++ b/src/components/default-page-footer.less
@@ -1,5 +1,5 @@
 .DefaultPageFooter {
-  width: 100vw;
+  width: 100%;
   .m-page-content;
   flex: none;
   display: flex;
