--- a/src/components/homepage/homepage-project-presentation.less
+++ b/src/components/homepage/homepage-project-presentation.less
@@ -46,6 +46,10 @@
   align-items: center;
 }
 
+.HomepageProjectPresentation-featureLabel {
+  .m-line-clamp(3);
+}
+
 .HomepageProjectPresentation-featureIcon {
   font-size: 2 * @edu-font-size-base;
 }
