--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -18,6 +18,7 @@
 
 // Layering
 // (should stay below 1000 as the antd layers begin there)
+@edu-z-index-background-layer: -1;
 @edu-z-index-base-layer: 0;
 @edu-z-index-cover-layer: 1;
 @edu-z-index-overlay-layer: 900;
