--- a/test-app/src/bundles/homepage-sponsors.less
+++ b/test-app/src/bundles/homepage-sponsors.less
@@ -1,5 +1,5 @@
 .HomepageSponsors {
-  width: 100vw;
+  width: 100%;
   display: grid;
   gap: 15px;
   grid-auto-flow: row;
