--- a/test-app/src/bundles/homepage-template.less
+++ b/test-app/src/bundles/homepage-template.less
@@ -1,5 +1,5 @@
 .HomepageTemplate {
-  width: 100vw;
+  width: 100%;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -7,9 +7,13 @@
   min-width: @edu-min-page-width;
 }
 
+.HomepageTemplate-main {
+  width: 100%;
+}
+
 .HomepageTemplate-aboveFold {
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -17,10 +21,11 @@
 
 .HomepageTemplate-foldDividerTop {
   position: absolute;
-  width: 100vw;
+  width: 100%;
   bottom: 0;
   left: 0;
   background-color: @edu-background-color-medium;
+  z-index: @edu-z-index-background-layer;
 }
 
 .HomepageTemplate-aboveFoldContent {
@@ -57,10 +62,11 @@
 }
 
 .HomepageTemplate-underFold {
-  width: 100vw;
+  width: 100%;
   display: grid;
   grid-auto-flow: row;
   place-items: center;
+  z-index: @edu-z-index-background-layer;
 }
 
 .HomepageTemplate-underFoldStripe {
@@ -85,7 +91,7 @@
 
 .HomepageTemplate-foldDividerBottom {
   position: absolute;
-  width: 100vw;
+  width: 100%;
   left: 0;
 }
 
